# claude-code-hackathon

./: README.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: redact_pii.py
dashboard/: index.html
data/: canonical.csv  generate_sources.py  pipeline.py  pipeline_report.json  source_a.csv  source_b.csv  source_c.csv  source_d.csv
decisions/: metric-definition.md
engine/: CLAUDE.md  app.py  calculator.py
engine/definitions/: __init__.py  v1.py  v2.py  v3.py  v4.py
engine/tests/: fixtures.py  test_v1.py  test_v2.py  test_v3.py  test_v4.py
evals/: golden_questions.json  reconciliation.md  run_evals.py
panel/: coordinator.py
semantic/: CLAUDE.md  server.py
